[gd_scene load_steps=23 format=3 uid="uid://dbqiqfqf3pytg"]

[ext_resource type="Script" path="res://demo/Main.gd" id="1_j883o"]
[ext_resource type="Script" path="res://addons/scene_texture/SceneTexture.gd" id="1_oi2nq"]
[ext_resource type="Environment" uid="uid://d22ljvvlfrf5x" path="res://demo/main_environment.tres" id="2_i30cj"]
[ext_resource type="ButtonGroup" uid="uid://bdg4j4eddan60" path="res://demo/button_group.tres" id="2_w4sxa"]
[ext_resource type="PackedScene" uid="uid://b8dhifickdrll" path="res://demo/assets/models/tree_blocks_fall.glb" id="4_0ntgt"]
[ext_resource type="Texture2D" uid="uid://0hy8ggdx1ffh" path="res://demo/tree_fall_texture.tres" id="4_l7jv1"]
[ext_resource type="PackedScene" uid="uid://dm5w3m8w5j42p" path="res://demo/assets/models/tree_detailed.glb" id="6_7omst"]
[ext_resource type="World3D" uid="uid://bra76mpxojd28" path="res://demo/custom_scene_texture_world3d.tres" id="6_avdnd"]
[ext_resource type="PackedScene" uid="uid://c8mdsyxmrlvpc" path="res://demo/assets/models/cactus_short.glb" id="7_h7q65"]
[ext_resource type="PackedScene" uid="uid://ds06y47egew6" path="res://demo/assets/models/bed.glb" id="8_p72rv"]
[ext_resource type="PackedScene" uid="uid://dyva5tkj2xmm0" path="res://demo/assets/models/tree_blocks.glb" id="9_n7f3y"]
[ext_resource type="PackedScene" uid="uid://72wxtio38n51" path="res://demo/scenes/scene.tscn" id="11_bbn70"]

[sub_resource type="Texture2D" id="Texture2D_d7uob"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_oi2nq")
size = Vector2i(96, 96)
scene = ExtResource("4_0ntgt")
scene_position = Vector3(0, 0.055, 0)
scene_rotation = Vector3(0, 0, 0)
scene_scale = Vector3(1, 1, 1)
camera_distance = 2.28
camera_position = Vector3(0, 0.72, 0)
camera_rotation = Vector3(-0.698132, -0.436332, 0)
light_color = Color(1, 1, 1, 1)
light_energy = 2.5
light_angular_distance = 0.0
light_shadow = false
light_rotation = Vector3(-1.0472, 1.0472, 0)
render_world_3d = ExtResource("6_avdnd")
render_transparent_bg = true
render_auto_bake = true
render_store_bake = false
render_msaa_3d = 2
render_screen_space_aa = 1

[sub_resource type="Texture2D" id="Texture2D_0431j"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_oi2nq")
size = Vector2i(96, 96)
scene = ExtResource("6_7omst")
scene_position = Vector3(0, 0.065, 0)
scene_rotation = Vector3(0, 0, 0)
scene_scale = Vector3(1, 1, 1)
camera_distance = 2.425
camera_position = Vector3(0, 0.79, 0)
camera_rotation = Vector3(-0.523599, -0.436332, 0)
light_color = Color(1, 1, 1, 1)
light_energy = 2.5
light_angular_distance = 0.0
light_shadow = false
light_rotation = Vector3(-1.0472, 1.0472, 0)
render_transparent_bg = true
render_auto_bake = true
render_store_bake = false
render_msaa_3d = 2
render_screen_space_aa = 1

[sub_resource type="Texture2D" id="Texture2D_2ecfp"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_oi2nq")
size = Vector2i(96, 96)
scene = ExtResource("7_h7q65")
scene_position = Vector3(0, 0.085, 0)
scene_rotation = Vector3(0, 0, 0)
scene_scale = Vector3(1, 1, 1)
camera_distance = 1.185
camera_position = Vector3(0, 0.31, 0)
camera_rotation = Vector3(-0.523599, -0.436332, 0)
light_color = Color(1, 1, 1, 1)
light_energy = 2.5
light_angular_distance = 0.0
light_shadow = false
light_rotation = Vector3(-1.0472, 1.0472, 0)
render_transparent_bg = true
render_auto_bake = true
render_store_bake = false
render_msaa_3d = 2
render_screen_space_aa = 1

[sub_resource type="Texture2D" id="Texture2D_fqi1k"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_oi2nq")
size = Vector2i(96, 96)
scene = ExtResource("8_p72rv")
scene_position = Vector3(0, -0.01, 0)
scene_rotation = Vector3(0, 0, 0)
scene_scale = Vector3(1, 1, 1)
camera_distance = 1.245
camera_position = Vector3(0.05, -0.01, 0)
camera_rotation = Vector3(-0.523599, -0.436332, 0)
light_color = Color(1, 1, 1, 1)
light_energy = 2.5
light_angular_distance = 0.0
light_shadow = false
light_rotation = Vector3(-1.0472, 0.476475, 0)
render_transparent_bg = true
render_auto_bake = true
render_store_bake = false
render_msaa_3d = 2
render_screen_space_aa = 1

[sub_resource type="Texture2D" id="Texture2D_2tgy0"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_oi2nq")
size = Vector2i(96, 96)
scene = ExtResource("11_bbn70")
scene_position = Vector3(-0.015, 0.18, 0)
scene_rotation = Vector3(0, 0.443314, 0)
scene_scale = Vector3(1, 1, 1)
camera_distance = 3.435
camera_position = Vector3(0, 0.72, 0)
camera_rotation = Vector3(-0.523599, 0.277507, 0)
light_color = Color(0.806184, 0.710245, 0.62168, 1)
light_energy = 3.94
light_angular_distance = 0.0
light_shadow = false
light_rotation = Vector3(-1.0472, 1.0472, 0)
render_transparent_bg = true
render_auto_bake = true
render_store_bake = false
render_msaa_3d = 2
render_screen_space_aa = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_abv04"]
albedo_color = Color(0.66612, 0.717192, 0.708549, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ndcfo"]
albedo_color = Color(0.336608, 0.336608, 0.336608, 1)
metallic = 0.69

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_moy8s"]
albedo_color = Color(0.491292, 0.316364, 0.316923, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_miisf"]
transparency = 1
albedo_texture = ExtResource("4_l7jv1")

[sub_resource type="QuadMesh" id="QuadMesh_ednu6"]
material = SubResource("StandardMaterial3D_miisf")
size = Vector2(0.25, 0.25)

[node name="Main" type="Node3D" node_paths=PackedStringArray("scene_pivot")]
script = ExtResource("1_j883o")
scene_pivot = NodePath("ScenePivot")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_i30cj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.738488, 0.583933, -0.337132, -2.40807e-08, 0.499998, 0.866027, 0.674266, -0.63955, 0.369242, 0, 0, 0)
shadow_enabled = true
shadow_blur = 0.825
directional_shadow_split_2 = 0.131
directional_shadow_split_3 = 0.261
directional_shadow_blend_splits = true
directional_shadow_fade_start = 0.316
directional_shadow_max_distance = 8.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = -258.0
offset_right = 370.0
offset_bottom = 258.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_w4sxa")
text = "Tree Fall"
icon = ExtResource("4_l7jv1")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_w4sxa")
text = "Tree Fall
Custom Env"
icon = SubResource("Texture2D_d7uob")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_w4sxa")
text = "Tree Detailed"
icon = SubResource("Texture2D_0431j")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_w4sxa")
text = "Cactus"
icon = SubResource("Texture2D_2ecfp")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button5" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_w4sxa")
text = "Bed"
icon = SubResource("Texture2D_fqi1k")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Button6" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_w4sxa")
text = "Scene"
icon = SubResource("Texture2D_2tgy0")
autowrap_mode = 2
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Randomize" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Randomize Settings"

[node name="ScenePivot" type="Node3D" parent="."]

[node name="tree_blocks2" parent="ScenePivot" instance=ExtResource("9_n7f3y")]

[node name="CSGBox3D" type="CSGBox3D" parent="ScenePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0466338, 0)
size = Vector3(0.826, 0.093, 0.826)
material = SubResource("StandardMaterial3D_abv04")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(0.973992, -4.34439e-08, 0.226584, -0.0586441, 0.965926, 0.252088, -0.218863, -0.258819, 0.940804, -0.0226147, 0.958992, 1.9568)
far = 8.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.101908, 0)
radius = 0.9
height = 0.093
sides = 32
material = SubResource("StandardMaterial3D_ndcfo")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(0.970435, 0, -0.241363, 0, 1, 0, 0.241363, 0, 0.970435, 0.557, 0, 0.532)

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.126096, 0)
radius = 0.0219307
height = 0.369994

[node name="CSGBox3D" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0.339434, 0.0118795)
size = Vector3(0.28, 0.28, 0.017)
material = SubResource("StandardMaterial3D_moy8s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.14907e-10, 0.00922859)
mesh = SubResource("QuadMesh_ednu6")

[connection signal="pressed" from="CenterContainer/VBoxContainer/Randomize" to="." method="_on_rebake_pressed"]
